--- a/app/styles/style.sass
+++ b/app/styles/style.sass
@@ -4,3 +4,11 @@ html, body, webview
   margin: 0
   padding: 0
   overflow: hidden
+
+.webview
+  width: 0
+
+.loader
+  width: 100%
+  height: 100%
+  background: url('../images/stub-site.gif') no-repeat center
