--- a/app/styles/external.sass
+++ b/app/styles/external.sass
@@ -30,7 +30,7 @@ html:not(.anonym__rich)
     padding-right: 12px
 
   .msg_tx
-    max-width: 9999px
+    max-width: 80%
 
   .chat_write
     .itx_w
