--- a/app/styles/external.sass
+++ b/app/styles/external.sass
@@ -1,7 +1,3 @@
-html:not(.anonym__rich)
-  body > :not(.toolbar-layer_w)
-    display: none
-
 .anonym-feed
   display: none
 
@@ -38,3 +34,6 @@ html:not(.anonym__rich)
 
   .chat_toolbar_call
     display: none
+
+  .chat_cnt
+    height: 0
