--- a/app/styles/external.sass
+++ b/app/styles/external.sass
@@ -1,38 +1,14 @@
 .anonym-feed
   display: none
 
+#hook_Block_Footer
+  display: none
+
+.topPanel
+  display: none
+
 #hook_Block_MessagesLayer
-  width: 100%
-  height: 100%
-  margin: 0
-  top: 0
-  left: 0
-  position: fixed
-
-  .toolbar-layer_cnt
-    width: 100%
-    height: 100%
-
-  .toolbar-layer_close
-    display: none
-
-  .chat
-    width: auto
-
-  .chat_list
-    width: 98%
-
-  .chat_toolbar_ac
-    padding-right: 12px
-
-  .msg_tx
-    max-width: 80%
-
-  .chat_write
-    .itx_w
-      max-width: 9999px
-
-  .chat_toolbar_call
+  .js-call-button
     display: none
 
   .chat_cnt
