--- a/app/styles/style.sass
+++ b/app/styles/style.sass
@@ -11,4 +11,4 @@ webview
 .loader
   width: 100%
   height: 100%
-  background: url('../images/stub-site.gif') no-repeat center
+  background: url('../images/time.gif') no-repeat center
